--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>HGLabor - Stats</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:700">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="resources/logo.png">
     <script src="script.js" defer></script>
 </head>
 <body>
