--- a/stats.html
+++ b/stats.html
@@ -45,7 +45,7 @@
             <img src="./resources/sleeping-snorlax.png" alt="Sleeping snorlax">
             <div class="not-found-text">
                 <h1>404</h1>
-                <p>Player not found</p>
+                <p>Player not found :(</p>
             </div>
         </div>
         <div id="stats-container">
