--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <p id="ip">hglabor.de</p>
                     <div class="online-flexbox">
                         <div id="online-circle"></div>
-                        <p id="server-status">loading...</p>
+                        <p id="server-status">laden...</p>
                     </div>
                 </div>
             </div>
@@ -30,13 +30,18 @@
     <main>
         <!-- Popups -->
         <div id="playPopup">
-            <h1>How to join</h1>
+            <h1>Wie man spielt</h1>
             <ol>
-                <li>Open <span style="font-weight: bold">Minecraft Java Edition</span> (1.21.4 recommended)</li>
-                <li>Click <span style="font-weight: bold">Multiplayer</span> > <span style="font-weight: bold">Add Server</span></li>
-                <li>Enter Server IP: <span style="font-weight: bold">hglabor.de</span></li>
-                <li>Click <span style="font-weight: bold">Join Server</span> and start playing!</li>
+                <li>Starte <span style="font-weight: bold">Minecraft Java Edition</span> (1.21.4 empfohlen)</li>
+                <li>Klicke auf <span style="font-weight: bold">Mehrspieler</span> > <span style="font-weight: bold">Server hinzufügen</span></li>
+                <li>Gib folgende IP an: <span style="font-weight: bold">hglabor.de</span></li>
+                <li>Klicke auf <span style="font-weight: bold">Server betreten</span> und fang an zu spielen!</li>
             </ol>
+        </div>
+
+        <div id="leaderboardPopup">
+            <h1>Bestenliste</h1>
+            <p>Vielleicht irgendwann 🤷</p>
         </div>
 
         <div id="eventsPopup">
@@ -94,15 +99,15 @@
         <div class="search-wrapper">
             <svg xmlns="http://www.w3.org/2000/svg" width="42" height="42" viewBox="0 0 24 24" fill="none" stroke="rgba(0, 170, 255, 0.67)" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-search-icon lucide-search"><path d="m21 21-4.34-4.34"/><circle cx="11" cy="11" r="8"/></svg>
             <form action="./stats.html" method="get">
-                <input type="text" name="user" placeholder="Name or UUID" autocomplete="off">
+                <input type="text" name="user" placeholder="Name oder UUID" autocomplete="off">
             </form>
         </div>
         <div class="buttons-wrapper">
-            <div>
-                <p>LEADERBOARD</p>
+            <div onclick="openPopup('leaderboardPopup')">
+                <p>BESTENLISTE</p>
             </div>
             <div onclick="openPopup('playPopup')">
-                <p>PLAY</p>
+                <p>SPIELEN</p>
             </div>
             <div onclick="openPopup('eventsPopup')">
                 <p>EVENTS</p>
@@ -113,8 +118,8 @@
     <footer>
         <div class="links-wrapper">
             <a href="#">STATUS</a>
-            <a href="#">IMPRINT</a>
-            <a href="#">PRIVACY</a>
+            <a href="#">IMPRESSUM</a>
+            <a href="#">DATENSCHUTZ</a>
         </div>
         <div class="socials-wrapper">
             <svg onclick="window.open(src='https://github.com/HGLabor/', target='_blank')" id="github-icon" width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg"><g clip-path="url(#clip0_3_156)"><path fill-rule="evenodd" clip-rule="evenodd" d="M20 0C31.046 0 40 9.17986 40 20.5059C40 29.5639 34.276 37.2479 26.334 39.9619C25.32 40.1639 24.96 39.5235 24.96 38.9775C24.96 38.3015 24.984 36.0936 24.984 33.3496C24.984 31.4376 24.344 30.1897 23.626 29.5537C28.08 29.0457 32.76 27.3115 32.76 19.4355C32.76 17.1955 31.984 15.3676 30.7 13.9316C30.908 13.4136 31.594 11.3279 30.504 8.50391C30.504 8.50391 28.828 7.95445 25.01 10.6064C23.412 10.1524 21.7 9.92402 20 9.91602C18.3 9.92402 16.59 10.1524 14.994 10.6064C11.172 7.95445 9.492 8.50391 9.492 8.50391C8.406 11.3279 9.092 13.4136 9.298 13.9316C8.02 15.3676 7.23801 17.1955 7.23801 19.4355C7.23801 27.2915 11.908 29.0523 16.35 29.5703C15.778 30.0823 15.26 30.9855 15.08 32.3115C13.94 32.8355 11.044 33.7424 9.25999 30.6084C9.25999 30.6084 8.202 28.6381 6.194 28.4941C6.194 28.4941 4.244 28.4682 6.058 29.7402C6.058 29.7402 7.368 30.3702 8.278 32.7402C8.278 32.7402 9.45201 36.4002 15.016 35.1602C15.026 36.8742 15.044 38.4895 15.044 38.9775C15.044 39.5195 14.676 40.1539 13.678 39.9639C5.72999 37.2539 0 29.5659 0 20.5059C0 9.17986 8.956 0 20 0Z" fill="#b8b4b4"/></g><defs><clipPath id="clip0_3_156"><rect width="40" height="40" fill="white"/></clipPath></defs></svg>
