--- a/stats.html
+++ b/stats.html
@@ -22,7 +22,7 @@
             <div class="search-wrapper">
                 <svg xmlns="http://www.w3.org/2000/svg" width="42" height="42" viewBox="0 0 24 24" fill="none" stroke="rgba(0, 170, 255, 0.67)" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-search-icon lucide-search"><path d="m21 21-4.34-4.34"/><circle cx="11" cy="11" r="8"/></svg>
                 <form action="./stats.html" method="get">
-                    <input type="text" name="user" placeholder="Name or UUID" autocomplete="off">
+                    <input type="text" name="user" placeholder="Name oder UUID" autocomplete="off">
                 </form>
             </div>
         </div>
@@ -34,7 +34,7 @@
                     <p id="ip">hglabor.de</p>
                     <div class="online-flexbox">
                         <div id="online-circle"></div>
-                        <p id="server-status">loading...</p>
+                        <p id="server-status">laden...</p>
                     </div>
                 </div>
             </div>
@@ -45,7 +45,7 @@
             <img src="./resources/sleeping-snorlax.png" alt="Sleeping snorlax">
             <div class="not-found-text">
                 <h1>404</h1>
-                <p>Player not found :(</p>
+                <p>Spieler nicht gefunden :(</p>
             </div>
         </div>
         <div id="stats-container">
@@ -53,7 +53,7 @@
             <div class="stats-row">
                 <div class="stats-userinfo">
                     <img id="skull" src="https://skins.mcstats.com/skull/uuid?scale=1&overlay=true&cropMeasurement=pixels&expandMeasurement=pixels&cropLeft=0&cropRight=0&cropTop=0&cropBottom=0&expandLeft=0&expandRight=0&expandTop=0&expandBottom=0&alwaysSquare=true&grayscale=false">
-                    <h1 id="username-text">None</h1>
+                    <h1 id="username-text">/</h1>
                 </div>
             </div>
 
@@ -65,11 +65,11 @@
                     <h2 class="stats-title">GENERAL</h2>
                     <p id="xp"><span>XP:</span> </p>
                     <p id="kills"><span>Kills:</span> </p>
-                    <p id="deaths"><span>Deaths:</span> </p>
+                    <p id="deaths"><span>Tode:</span> </p>
                     <p id="killDeathRatio"><span>K/D:</span> </p>
                     <p id="currentKillstreak"><span>Killstreak:</span> </p>
-                    <p id="highestKillstreak"><span>Highest Killstreak:</span> </p>
-                    <p id="bounty"><span>Bounty:</span> </p>
+                    <p id="highestKillstreak"><span>Höchste Killstreak:</span> </p>
+                    <p id="bounty"><span>Kopfgeld:</span> </p>
                 </div>
             </div>
 
