subtle fixes & spinning snorlax loading animation

--- a/stats.html
+++ b/stats.html
@@ -41,6 +41,9 @@
         </div>
     </header>
     <main>
+        <div id="loading">
+            <img src="./resources/loading-snorlax.png">
+        </div>
         <div id="not-found">
             <img src="./resources/sleeping-snorlax.png" alt="Sleeping snorlax">
             <div class="not-found-text">
