added alt texts

--- a/stats.html
+++ b/stats.html
@@ -42,7 +42,7 @@
     </header>
     <main>
         <div id="loading">
-            <img src="./resources/loading-snorlax.png">
+            <img src="./resources/loading-snorlax.png" alt="spinning snorlax (loading...)">
         </div>
         <div id="not-found">
             <img src="./resources/sleeping-snorlax.png" alt="Sleeping snorlax">
@@ -55,14 +55,14 @@
 
             <div class="stats-row">
                 <div class="stats-userinfo">
-                    <img id="skull" src="https://skins.mcstats.com/skull/uuid?scale=1&overlay=true&cropMeasurement=pixels&expandMeasurement=pixels&cropLeft=0&cropRight=0&cropTop=0&cropBottom=0&expandLeft=0&expandRight=0&expandTop=0&expandBottom=0&alwaysSquare=true&grayscale=false">
+                    <img alt="skull of given minecraft user" id="skull" src="https://skins.mcstats.com/skull/uuid?scale=1&overlay=true&cropMeasurement=pixels&expandMeasurement=pixels&cropLeft=0&cropRight=0&cropTop=0&cropBottom=0&expandLeft=0&expandRight=0&expandTop=0&expandBottom=0&alwaysSquare=true&grayscale=false">
                     <h1 id="username-text">/</h1>
                 </div>
             </div>
 
             <div class="stats-row">
                 <div class="stats-skin">
-                    <img id="skin" src="https://skins.mcstats.com/body/front/uuid?scale=1&fov=50&shadow=true&disableCosmeticType=all&overlay=true&cropMeasurement=pixels&expandMeasurement=pixels&cropLeft=0&cropRight=0&cropTop=0&cropBottom=0&expandLeft=0&expandRight=0&expandTop=0&expandBottom=0&alwaysSquare=true&grayscale=false">
+                    <img alt="skin of given minecraft user" id="skin" src="https://skins.mcstats.com/body/front/uuid?scale=1&fov=50&shadow=true&disableCosmeticType=all&overlay=true&cropMeasurement=pixels&expandMeasurement=pixels&cropLeft=0&cropRight=0&cropTop=0&cropBottom=0&expandLeft=0&expandRight=0&expandTop=0&expandBottom=0&alwaysSquare=true&grayscale=false">
                 </div>
                 <div class="stats-general">
                     <h2 class="stats-title">GENERAL</h2>
