added imprint button

--- a/stats.html
+++ b/stats.html
@@ -101,7 +101,7 @@
     <footer>
         <div class="links-wrapper">
             <a href="#">STATUS</a>
-            <a href="#">IMPRESSUM</a>
+            <a onclick="openPopup('imprintPopup')" href="#">IMPRESSUM</a>
             <a href="#">DATENSCHUTZ</a>
         </div>
         <div class="socials-wrapper">
