--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
 
     <main>
         <!-- Popups -->
+        <div id="imprintPopup">
+            <img src="https://c.tenor.com/4n5Pk8vDiGUAAAAd/tenor.gif" alt="twerking snorlax">
+        </div>
+
         <div id="playPopup">
             <h1>Wie man spielt</h1>
             <ol>
@@ -118,7 +122,7 @@
     <footer>
         <div class="links-wrapper">
             <a href="#">STATUS</a>
-            <a href="#">IMPRESSUM</a>
+            <a onclick="openPopup('imprintPopup')" href="#">IMPRESSUM</a>
             <a href="#">DATENSCHUTZ</a>
         </div>
         <div class="socials-wrapper">
