--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="HGLabor Statistics">
+    <meta property="og:description" content="Look up HGLabor Statistics">
+    <meta property="og:image" content="https://kolpixx.github.io/HGLaborStats/resources/logo.png">
+    <meta property="og:type" content="website">
     <title>HGLabor - Stats</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:700">
     <link rel="stylesheet" href="style.css">
