very bad leaderboard implementation

--- a/index.html
+++ b/index.html
@@ -48,8 +48,29 @@
         </div>
 
         <div id="leaderboardPopup">
-            <h1>Bestenliste</h1>
-            <p>Vielleicht irgendwann 🤷</p>
+            <h1>Leaderboard</h1>
+<!--            <div class="leaderboard-flexbox">-->
+<!--                <h1>Leaderboard</h1>-->
+<!--                <div class="dropdown">-->
+<!--                    <button class="dropdownButton">Sort by</button>-->
+<!--                    <div class="dropdown-content">-->
+<!--                        <p>Kills</p>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+            <table id="leaderboardTable">
+                <tr>
+                    <th>#</th>
+                    <th>Name</th>
+                    <th>Kills</th>
+                    <th>Tode</th>
+                    <th>K/D</th>
+                    <th>Killstreak</th>
+                    <th>Höchste Killstreak</th>
+                    <th>Bounty</th>
+                    <th>XP</th>
+                </tr>
+            </table>
         </div>
 
         <div id="eventsPopup">
