use webp instead of png

--- a/stats.html
+++ b/stats.html
@@ -9,14 +9,14 @@
     <meta property="og:type" content="website">
     <title id="title">Kolpix's stats</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="resources/logo.png">
+    <link rel="icon" href="resources/logo.webp">
     <script src="statsscript.js" defer></script>
     <script src="script.js" defer></script>
 </head>
 <body>
     <header>
         <div class="branding" onclick="window.open('index.html', '_self')">
-            <img src="resources/logo.png" alt="HGLabor Logo (old)">
+            <img src="resources/logo.webp" alt="HGLabor Logo (old)">
             <div class="branding-text">
                 <p><span class="HG-text">HG</span>Labor</p>
                 <p>Stats</p>
@@ -33,7 +33,7 @@
 
         <div class="server-widget">
             <div class="server-widget-flexbox">
-                <img src="resources/server_logo.png" alt="HGLabor Server Logo" id="server-info-logo">
+                <img src="resources/server_logo.webp" alt="HGLabor Server Logo" id="server-info-logo">
                 <div class="server-info-text-flexbox">
                     <p id="ip">hglabor.de</p>
                     <div class="online-flexbox">
@@ -46,10 +46,10 @@
     </header>
     <main>
         <div id="loading">
-            <img src="./resources/loading-snorlax.png" alt="spinning snorlax (loading...)">
+            <img src="resources/loading-snorlax.webp" alt="spinning snorlax (loading...)">
         </div>
         <div id="not-found">
-            <img src="./resources/sleeping-snorlax.png" alt="Sleeping snorlax">
+            <img src="resources/sleeping-snorlax.webp" alt="Sleeping snorlax">
             <div class="not-found-text">
                 <h1>404</h1>
                 <p>Spieler nicht gefunden :(</p>
