--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>HGLabor - Stats</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:700">
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="resources/logo.png">
+    <link rel="icon" href="resources/logo.webp">
     <script src="script.js" defer></script>
 </head>
 <body>
@@ -19,7 +19,7 @@
     <header>
         <div class="server-widget">
             <div class="server-widget-flexbox">
-                <img src="resources/server_logo.png" alt="HGLabor Server Logo" id="server-info-logo">
+                <img src="resources/server_logo.webp" alt="HGLabor Server Logo" id="server-info-logo">
                 <div class="server-info-text-flexbox">
                     <p id="ip">hglabor.de</p>
                     <div class="online-flexbox">
@@ -123,7 +123,7 @@
             </div>
         </div>
 
-        <img src="resources/logo.png" alt="HGLabor Logo (old)">
+        <img src="resources/logo.webp" alt="HGLabor Logo (old)">
         <h1 id="title"><span class=HG-text>HG</span>Labor x <span class="NoRisk-text">NoRisk</span> Client</h1>
         <div class="search-wrapper">
             <svg xmlns="http://www.w3.org/2000/svg" width="42" height="42" viewBox="0 0 24 24" fill="none" stroke="rgba(0, 170, 255, 0.67)" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-search-icon lucide-search"><path d="m21 21-4.34-4.34"/><circle cx="11" cy="11" r="8"/></svg>
