--- a/stats.html
+++ b/stats.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Look up HGLabor Statistics & Leaderbaord positions">
     <meta property="og:title" content="HGLabor Statistics">
     <meta property="og:description" content="Look up HGLabor Statistics">
     <meta property="og:image" content="https://kolpixx.github.io/HGLaborStats/resources/logo.png">
