add credits for svgs

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
     <footer>
         <div class="links-wrapper">
-            <a href="#">STATUS</a>
+            <a href="./credits.html">CREDITS</a>
             <a onclick="openPopup('imprintPopup')" href="#">IMPRESSUM</a>
             <a href="#">DATENSCHUTZ</a>
         </div>
