--- a/stats.html
+++ b/stats.html
@@ -105,7 +105,7 @@
     </main>
     <footer>
         <div class="links-wrapper">
-            <a href="#">STATUS</a>
+            <a href="./credits.html">CREDITS</a>
             <a onclick="openPopup('imprintPopup')" href="#">IMPRESSUM</a>
             <a href="#">DATENSCHUTZ</a>
         </div>
