--- a/credits.html
+++ b/credits.html
@@ -10,6 +10,7 @@
     <meta property="og:type" content="website">
     <title>Credits</title>
     <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
 </head>
 <body>
   <header>
