--- a/credits.html
+++ b/credits.html
@@ -8,6 +8,7 @@
     <meta property="og:description" content="Look up HGLabor Statistics">
     <meta property="og:image" content="https://kolpixx.github.io/HGLaborStats/resources/logo.png">
     <meta property="og:type" content="website">
+    <link rel="icon" href="resources/logo.webp">
     <title>Credits</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
